fixed seamlessness of the portfolio and resume page by setting the min height to 105vh, this way the scrollbar is there from there start before loading the images

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,7 +129,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 100vh;
+    min-height: 105vh;
     margin: 0 10%;
     animation: fadeIn 1.5s;
 }
@@ -168,6 +168,7 @@ a:hover {
 
 .portfolio-container {
     display: flex;
+    min-height: 105vh;
     max-width: 100vw;
     flex-wrap: wrap;
     margin: auto;
